# MrFoX-MeM

./: .env.example  .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRACT-FEED.md  CONTRACT.md  CONTRIBUTING.md  LICENSE  Makefile  OBSERVATIONS.md  README.md  SECURITY.md  VALIDATION.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  run.sh
.github/workflows/: ci.yml
core/: __init__.py  api.py  backends.py  embed.py  graph.py  ingest.py  rerank.py  run.py  store.py  tokens.py  tree.py  treesit.py
eval/: queries.json  results.json
hooks/: session_start.py  settings.snippet.json  settings.snippet.windows.json  user_prompt.py
integrations/: AUTO-CONTEXT.md  MCP-CLIENTS.md
integrations/commands/: mrfox-mem.md
integrations/rules/: AGENTS.md  CLAUDE.snippet.md  GEMINI.md  clinerules.md  copilot-instructions.md  cursor.mdc  windsurf.md
mcp/: README.md  package-lock.json  package.json  server.ts  tsconfig.json
scripts/: benchmark.py  eval.py  install-service.sh
security/: core-audit.md  mcp-hooks-audit.md  ui-audit.md  validation-contract.md  validation-security.md
tests/: conftest.py  test_api.py  test_backends.py  test_benchmark.py  test_embed.py  test_eval.py  test_graph.py  test_ingest.py  test_rerank.py  test_store.py  test_tokens.py  test_tree.py  test_treesit.py
ui/: app.js  index.html  style.css
