[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mrfox-mem"
version = "0.1.0"
description = "Local-first, zero-token, code-native memory for AI coding agents"
readme = "README.md"
# Floor is 3.11: core/ingest.py uses atomic-group regex (?>...) (3.11+). Nothing
# newer is required, so we do NOT gate on 3.13 (that needlessly excludes the
# majority of developers still on 3.11/3.12).
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "memory", "rag", "claude-code", "llm", "embeddings", "code-search", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/your-org/MrFoX-MeM"
Repository = "https://github.com/your-org/MrFoX-MeM"
Issues = "https://github.com/your-org/MrFoX-MeM/issues"

[project.optional-dependencies]
# Higher-quality local embeddings (BAAI/bge-small-en-v1.5, 384d, ONNX/CPU) and
# the cross-encoder reranker (fastembed>=0.4 ships TextCrossEncoder).
fastembed = ["fastembed>=0.4"]
# Optional runtime accelerator: vectorized cosine (one batched matmul) for the
# retrieval scan. Falls back to a pure-Python loop when absent.
accel = ["numpy>=1.24"]
# Accurate token budgeting (offline after first-use vocab fetch / vendored cache).
tokens = ["tiktoken>=0.7"]
# Multi-language symbol extraction (replaces regex heuristics when present).
treesitter = ["tree-sitter-language-pack>=1.10"]
# Test/dev toolchain (numpy included so the accelerated path is covered by CI).
dev = ["pytest>=8.0", "httpx>=0.27", "numpy>=1.24", "ruff>=0.6", "pytest-cov>=5.0"]

[project.scripts]
mrfox-mem = "core.run:main"

[tool.setuptools]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
# Lint core + tooling; the UI/MCP are JS/TS and out of ruff's scope.
extend-exclude = [".venv", "mcp", "ui"]
